--- a/index.html
+++ b/index.html
@@ -1,57 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- ----------------------------------------------------------------- -->
-<!-- ----------------------------------------------------------------- -->
-<!-- ----------------------------------------------------------------- -->
-<head> <!-- header begins here -->
+<head>
+  <!-- header begins here -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <meta name="author" content="">
-
+  <meta name="author" content="Lionel Youmbi">
+  <title>Morning News</title>
   <link href="./css/style.css" rel="stylesheet">
-  <script type="text/javascript" src="./js/header-functions.js"></script>
+</head>
 
-</head> <!-- header ends here -->
-<!-- ----------------------------------------------------------------- -->
-<!-- ----------------------------------------------------------------- -->
-<!-- ----------------------------------------------------------------- -->
+<body>
+  <div class="main">
+    <div class="side_nav">
+      <ion-icon name="close-circle-outline" class="nav_closed"></ion-icon>
+      <ul>
+        <li><a href="#breaking_news">BREAKING NEWS</a></li>
+        <li><a href="#more_news">MORE NEWS</a></li>
+        <li><a href="./about.html">ABOUT</a></li>
+        <li><a href="./contact.html">CONTACT US</a></li>
+      </ul>
+    </div>
 
+    <div class="container">
+      <div class="main_section1">
+        <div class="menu">
+          <ion-icon name="menu-sharp"></ion-icon><span>MENU</span>
+        </div>
+        <h1>MORNING NEWS</h1>
+        <img src="./img/img2.jpg" alt="Morning News">
+      </div>
+  
+      <div class="main_section2">
+        <h2>BREAKING MORNING NEWS</h2>
+        <div class="section2" id="breaking_news">
+          <div class="article">
+            <h3>What is Lorem Ipsum?</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+              electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+              Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+              PageMaker including versions of Lorem Ipsum.
+            </p>
+          </div>
+    
+          <div class="article">
+            <h3>Where can I get some?</h3>
+            <p>
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+              some form, by injected humour, or randomised words which don't look even slightly believable. If you are
+              going
+              to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle
+              of
+              text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making
+              this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a
+              handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem
+              Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+            </p>
+          </div>
+    
+          <div class="article">
+            <h3>Where does it come from?</h3>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+              Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
+              Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
+              Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
+              source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes
+              of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular
+              during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
+              section 1.10.32.
+            </p>
+          </div>
+          <div class="article">
+            <h3>Why do we use it?</h3>
+            <p>
+              It is a long established fact that a reader will be distracted by the readable content of a page when
+              looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
+              letters, as opposed to using 'Content here, content here', making it look like readable English. Many
+              desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a
+              search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved
+              over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="main_section3" id="more_news">
+        <h2>MORE NEWS</h2>
+        <div class="logo">
+          <a href="https://www.facebook.com/cnn/" target="_blank">
+            <ion-icon name="logo-facebook"></ion-icon>
+          </a>
+          <a href="https://twitter.com/CNN" target="_blank">
+            <ion-icon name="logo-twitter"></ion-icon>
+          </a>
+          <a href="https://www.instagram.com/cnn" target="_blank">
+            <ion-icon name="logo-instagram"></ion-icon>
+          </a>
+          <a href="https://www.youtube.com/user/CNN" target="_blank">
+            <ion-icon name="logo-youtube"></ion-icon>
+          </a>
+        </div>
+      </div>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-<!-- ---------------------------------------------------------------------------------- -->
-<!-- ---------------------------------------------------------------------------------- -->
-<!-- ---------------------------------------------------------------------------------- -->
-<body> <!-- body begins here -->
-
-
-  The quickest of brown foxes.
-
-
-
-
-  <!-- ====================================================== -->
-  <!-- ====================================================== -->
-  <footer>
-    <!-- footer of page begins here -->
-    <script type="text/javascript" src="./js/footer-functions.js"></script>
-  </footer> <!-- footer of page ends here -->
-  <!-- ====================================================== -->
-  <!-- ====================================================== -->
-
+  </div>
+  <script src="./js/script.js"></script>
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
-<!-- ---------------------------------------------------------------------------------- -->
-<!-- ---------------------------------------------------------------------------------- -->
-<!-- ---------------------------------------------------------------------------------- -->
 
 </html>
