--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <ion-icon name="close-circle-outline" class="nav_closed"></ion-icon>
             <ul>
                 <li><a href="./index.html">HOME</a></li>
-                <li><a href="./about.html">ABOUT</a></li>
+                <li><a href="./register.html">NEW MEMBER</a></li>
             </ul>
         </div>
         <div class="container">
@@ -31,7 +31,7 @@
                     <table>
                         <tr>
                             <td>Object:</td>
-                            <td><input type="text" name="object" id="object" placeholder=" Objective of the email"></td>
+                            <td><input type="text" name="object" id="object" placeholder=" Object"></td>
                         </tr>
                         <tr>
                             <td>Email:</td>
