--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="#breaking_news">BREAKING NEWS</a></li>
         <li><a href="#more_news">MORE NEWS</a></li>
-        <li><a href="./about.html">ABOUT</a></li>
+        <li><a href="./register.html">NEW MEMBER</a></li>
         <li><a href="./contact.html">CONTACT US</a></li>
       </ul>
     </div>
@@ -33,7 +33,7 @@
       </div>
   
       <div class="main_section2">
-        <h2>BREAKING MORNING NEWS</h2>
+        <h2>MORNING BREAKING NEWS</h2>
         <div class="section2" id="breaking_news">
           <div class="article">
             <h3>What is Lorem Ipsum?</h3>
